--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -36,7 +36,7 @@
     </div>
 </div>
 
-
+<section>
 <div class="w-full flex justify-center">
     <div class="grid w-full grid-cols-6 gap-4">     
         <div class="col-span-4 col-start-2 w-full flex justify-center">            
@@ -87,7 +87,7 @@
                                 transition-colors open:bg-blue-50 open:text-blue-700
                                 [&::-webkit-details-marker]:hidden">
                                 <span class="static-acc-title">{{ element_2.accordion_3_title }}</span>
-                                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                 <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                                 </svg>
                             </summary>
@@ -104,7 +104,7 @@
                                 transition-colors open:bg-blue-50 open:text-blue-700
                                 [&::-webkit-details-marker]:hidden">
                                 <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
-                                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                 <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                                 </svg>
                             </summary>
@@ -121,10 +121,10 @@
         </div>
     </div>
 </div>
+</section>
 
 
-
-
+<section>
 <!-- ELEMENT 3 - BOX -->
 <div class="w-full flex justify-center">
 
@@ -159,141 +159,155 @@
     </div>
 
 </div>
-
+</section>
 
 
 <!-- ELEMENT 4 four cards -->
 
-<div class="w-full flex justify-center bg-white">
-    <div class="grid grid-cols-6 gap-4 w-full">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    <h5 class="section-header-title-small">
-                        {{ element_4.cards_header_title_small }}
-                    </h5>
-                    <h2 id="how-does-the-data-deposition-work" class="section-header-title">
-                        {{ element_4.cards_header_title }}                        
-                    </h2>
+<!-- CARDS HEADER -->
+<section class="w-full bg-white " style="margin-top: 3rem;">    
+    <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">
+                <h1 class="section-header-title-small">
+                     {{ cards.cards_header_title_small }}
+                </h1>
+                <h2 class="section-header-title" id="how-does-the-data-deposition-work">
+                     {{ cards.cards_header_title }}
+                </h2>
+            </div>            
+        </div>
+    
+</section>
+
+<!-- CARDS -->
+<section class="w-full cards-container">
+    <div class="mx-auto w-full max-w-6xl px-6">
+        <div class="container-w980 mx-auto">
+            <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-4">
+                <!-- Card 1 -->
+                <div>
+                    <div class="flex h-full flex-col overflow-hidden rounded-[12px] bg-white shadow">
+                        <img
+                            class="card-img-top cards-static-images h-auto max-w-full"
+                            src="{{ cards.card_1_image }}"
+                            alt="{{ cards.card_1_title }}"
+                            loading="lazy"
+                            />
+
+                        <div class="card-body home-resources-body flex h-full flex-col p-4">
+                            <h5 class="card-title mb-3">
+                                <a class="block text-left" href="{{ cards.card_1_url }}">
+                                    {{ cards.card_1_title }}
+                                </a>
+                            </h5>
+
+                            <p class="card-text home-resources-text h-full text-left">
+                                {{ cards.card_1_text }}
+                            </p>
+
+                            <p class="contents">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_1_url }}">
+                                    Show
+                                </a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
+
+                <!-- Card 2 -->
+                <div>
+                    <div class="flex h-full flex-col overflow-hidden rounded-[12px] bg-white shadow">
+                        <img
+                            class="card-img-top cards-static-images h-auto max-w-full"
+                            src="{{ cards.card_2_image }}"
+                            alt="{{ cards.card_2_title }}"
+                            loading="lazy"
+                            />
+
+                        <div class="card-body home-resources-body flex h-full flex-col p-4">
+                            <h5 class="card-title mb-3">
+                                <a class="block text-left" href="{{ cards.card_2_url }}">
+                                    {{ cards.card_2_title }}
+                                </a>
+                            </h5>
+
+                            <p class="card-text home-resources-text h-full text-left">
+                                {{ cards.card_2_text }}
+                            </p>
+
+                            <p class="contents">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_2_url }}">
+                                    Show
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div>
+                    <div class="flex h-full flex-col overflow-hidden rounded-[12px] bg-white shadow">
+                        <img
+                            class="card-img-top cards-static-images h-auto max-w-full"
+                            src="{{ cards.card_3_image }}"
+                            alt="{{ cards.card_3_title }}"
+                            loading="lazy"
+                            />
+
+                        <div class="card-body home-resources-body flex h-full flex-col p-4">
+                            <h5 class="card-title mb-3">
+                                <a class="block text-left" href="{{ cards.card_3_url }}">
+                                    {{ cards.card_3_title }}
+                                </a>
+                            </h5>
+
+                            <p class="card-text home-resources-text h-full text-left">
+                                {{ cards.card_3_text }}
+                            </p>
+
+                            <p class="contents">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_3_url }}">
+                                    Show
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 4 -->
+                <div>
+                    <div class="flex h-full flex-col overflow-hidden rounded-[12px] bg-white shadow">
+                        <img
+                            class="card-img-top cards-static-images h-auto max-w-full"
+                            src="{{ cards.card_4_image }}"
+                            alt="{{ cards.card_4_title }}"
+                            loading="lazy"
+                            />
+
+                        <div class="card-body home-resources-body flex h-full flex-col p-4">
+                            <h5 class="card-title mb-3">
+                                <a class="block text-left" href="{{ cards.card_4_url }}">
+                                    {{ cards.card_4_title }}
+                                </a>
+                            </h5>
+
+                            <p class="card-text home-resources-text h-full text-left">
+                                {{ cards.card_4_text }}
+                            </p>
+
+                            <p class="contents">
+                                <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_4_url }}">
+                                    Show
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
-</div>
-
-<div class="w-full flex justify-center cards-container">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2 container-w980">
-
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
-                <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
-                        <div class="h-full shadow bg-white flex flex-col border-0">
-                            <img
-                                class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ element_4.card_1_image }}" alt="{{ element_4.card_1_title }}"
-                                loading="lazy"
-                                />
-
-                            <div class="card-body home-resources-body p-4 h-full">
-                                <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ element_4.card_1_url }}">{{ element_4.card_1_title }}</a>
-                                </h5>
-
-                                <p class="card-text home-resources-text text-left  h-full">
-                                    {{ element_4.card_1_text }}
-                                </p>
-
-                                <!-- display: contents -->
-                                <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_1_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
-                        <div class="h-full shadow bg-white flex flex-col border-0">
-                            <img
-                                class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ element_4.card_2_image }}" alt="{{ element_4.card_2_title }}"
-                                loading="lazy"
-                                />
-
-                            <div class="card-body home-resources-body p-4 h-full">
-                                <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ element_4.card_2_url }}">{{ element_4.card_2_title }}</a>
-                                </h5>
-
-                                <p class="card-text home-resources-text text-left  h-full">
-                                    {{ element_4.card_2_text }}
-                                </p>
-
-                                <!-- display: contents -->
-                                <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_2_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
-                        <div class="h-full shadow bg-white flex flex-col border-0">
-                            <img
-                                class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ element_4.card_3_image }}" alt="{{ element_4.card_3_title }}"
-                                loading="lazy"
-                                />
-
-                            <div class="card-body home-resources-body p-4 h-full">
-                                <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ element_4.card_3_url }}">{{ element_4.card_3_title }}</a>
-                                </h5>
-
-                                <p class="card-text home-resources-text text-left  h-full">
-                                    {{ element_4.card_3_text }}
-                                </p>
-
-                                <!-- display: contents -->
-                                <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_3_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
-                        <div class="h-full shadow bg-white flex flex-col border-0">
-                            <img
-                                class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ element_4.card_4_image }}" alt="{{ element_4.card_4_title }}"
-                                loading="lazy"
-                                />
-
-                            <div class="card-body home-resources-body p-4 h-full">
-                                <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ element_4.card_4_url }}">{{ element_4.card_4_title }}</a>
-                                </h5>
-
-                                <p class="card-text home-resources-text text-left  h-full">
-                                    {{ element_4.card_4_text }}
-                                </p>
-
-                                <!-- display: contents -->
-                                <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ element_4.card_4_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+</section>
 
 
 
