--- a/arche-react/en/home.html
+++ b/arche-react/en/home.html
@@ -162,155 +162,81 @@
     </div>
 
     <!-- Not ready -->
-    <div class="container-w980 mx-auto">
-        <div class="container mission-container">
+    <div class="mission-container-home">
+        <div class="container-w980 mx-auto">
+            <div class="container mission-container">
 
 
-            <div class='flex w-full'>
-                <div class='flex gap-6 w-full'>
-                    <div class='w-full w-1/2'>
+                <div class='flex w-full'>
+                    <div class='flex gap-6 w-full'>
+                        <div class='w-full w-1/2'>
 
-                        <div class="xl:text-left">
+                            <div class="xl:text-left">
 
-                            <p class="section-header-title-small flex">
-                                {{ element_4.title_small }}
-                            </p>
-                            <h2 class="section-header-title flex" id="mission">
-                                {{ element_4.title }}
-                            </h2>
+                                <p class="section-header-title-small flex">
+                                    {{ element_4.title_small }}
+                                </p>
+                                <h2 class="section-header-title flex" id="mission">
+                                    {{ element_4.title }}
+                                </h2>
 
-                            <p>
-                                {{ element_4.content_left }}
-                            </p>
+                                <p class="lead fw-normal">
+                                    {{ element_4.content_left }}
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class='w-full w-1/2'>
-                        {{ element_4.content_right }}
-                    </div>
-                </div>
-            </div>
-
-            <div class='flex w-full'>
-                <div class='flex gap-6 w-full'>
-                    <div class='w-full w-1/2'>
-                        <a
-                            class="btn btn-arche-blue"
-                            href="{{ element_4.more_url }}"
-                            >
-                            More
-                        </a>
-                    </div>
-                    <div class='w-full w-1/2'>
-                        <div class="grid grid-cols-3 text-center items-center">
-                            <div>
-                                <img
-                                    class="max-w-full h-auto"
-                                    src="/browser/images/logos/mission-acdh-logo.png"
-                                    alt="..."
-                                    width="56"
-                                    height="62"
-                                    />
-                            </div>
-                            <div>
-                                <img
-                                    class="max-w-full h-auto"
-                                    src="/browser/images/logos/mission-oaw-logo.png"
-                                    alt="..."
-                                    width="120"
-                                    height="59"
-                                    />
-                            </div>
-                            <div>
-                                <img
-                                    class="max-w-full h-auto"
-                                    src="/browser/images/logos/mission-arche-logo.png"
-                                    alt="..."
-                                    width="120"
-                                    height="39"
-                                    />
-                            </div>
+                        <div class='w-full w-1/2'>
+                            {{ element_4.content_right }}
                         </div>
                     </div>
                 </div>
-            </div>    
 
-        </div>
-    </div>
-    <div class="w-full flex justify-center mission-container-home">
-
-        <div class="grid grid-cols-6 gap-4">     
-
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container mission-container">
-                        <div class="grid grid-cols-12 gap-y-8">
-                            <div class="col-span-12 lg:col-span-6">
-                                <div class="text-center xl:text-left">
-                                    <p class="section-header-title-small">
-                                        {{ element_4.title_small }}
-                                    </p>
-                                    <h2 class="section-header-title text-[28px]">
-                                        {{ element_4.title }}
-                                    </h2>
-                                    <p class="lead fw-normal acdh-grey-color">
-                                        {{ element_4.content_left }}
-                                    </p>
+                <div class='flex w-full'>
+                    <div class='flex gap-6 w-full'>
+                        <div class='w-full w-1/2'>
+                            <a
+                                class="btn btn-arche-blue"
+                                href="{{ element_4.more_url }}"
+                                >
+                                More
+                            </a>
+                        </div>
+                        <div class='w-full w-1/2'>
+                            <div class="grid grid-cols-3 text-center items-center">
+                                <div>
+                                    <img
+                                        class="max-w-full h-auto"
+                                        src="/browser/images/logos/mission-acdh-logo.png"
+                                        alt="..."
+                                        width="56"
+                                        height="62"
+                                        />
                                 </div>
-                            </div>
-
-                            <div class="col-span-12 lg:col-span-6 text-center">
-                                {{ element_4.content_right }}
-                            </div>
-                        </div>
-
-                        <div class="grid grid-cols-12 items-center mt-6 w-full">
-                            <div class="col-span-12 lg:col-span-6">
-                                <a
-                                    class="btn btn-arche-blue"
-                                    href="{{ element_4.more_url }}"
-                                    >
-                                    More
-                                </a>
-                            </div>
-                            <div class="col-span-12 lg:col-span-6">
-                                <div class="container">
-                                    <div class="grid grid-cols-3 text-center items-center">
-                                        <div>
-                                            <img
-                                                class="max-w-full h-auto"
-                                                src="/browser/images/logos/mission-acdh-logo.png"
-                                                alt="..."
-                                                width="56"
-                                                height="62"
-                                                />
-                                        </div>
-                                        <div>
-                                            <img
-                                                class="max-w-full h-auto"
-                                                src="/browser/images/logos/mission-oaw-logo.png"
-                                                alt="..."
-                                                width="120"
-                                                height="59"
-                                                />
-                                        </div>
-                                        <div>
-                                            <img
-                                                class="max-w-full h-auto"
-                                                src="/browser/images/logos/mission-arche-logo.png"
-                                                alt="..."
-                                                width="120"
-                                                height="39"
-                                                />
-                                        </div>
-                                    </div>
+                                <div>
+                                    <img
+                                        class="max-w-full h-auto"
+                                        src="/browser/images/logos/mission-oaw-logo.png"
+                                        alt="..."
+                                        width="120"
+                                        height="59"
+                                        />
+                                </div>
+                                <div>
+                                    <img
+                                        class="max-w-full h-auto"
+                                        src="/browser/images/logos/mission-arche-logo.png"
+                                        alt="..."
+                                        width="120"
+                                        height="39"
+                                        />
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>    
+
             </div>
         </div>
-
     </div>
-
+   
 </section>
